@startuml

entity "User" as user {
  +id : BIGINT [PK]
  --
  balance : BIGINT
}

entity "UserBalanceHistory" as userBalanceHistory {
  +id : BIGINT [PK]
  --
  user_id : BIGINT
  amount : BIGINT
  type : VARCHAR
  created_at : TIMESTAMP
}

entity "Cart" as cart {
  +id : BIGINT [PK]
  --
  user_id : BIGINT
}

entity "CartItem" as cartItem {
  +id : BIGINT [PK]
  --
  cart_id : BIGINT
  product_id : BIGINT
  quantity : INT
}

entity "Order" as order {
  +id : BIGINT [PK]
  --
  user_id : BIGINT
  amount : BIGINT
  status : VARCHAR
}

entity "OrderItem" as orderItem {
  +id : BIGINT [PK]
  --
  order_id : BIGINT
  product_id : BIGINT
  quantity : INT
  price : BIGINT
}

entity "Product" as product {
  +id : BIGINT [PK]
  --
  name : VARCHAR
  price : BIGINT
  stock : INT
}

entity "ProductStatistics" as productStatistics {
  +product_id : BIGINT [PK]
  --
  sale_count : INT
  updated_at : TIMESTAMP
}

user ||--o{ userBalanceHistory
user ||--o{ cart
cart ||--o{ cartItem
user ||--o{ order
order ||--o{ orderItem
product ||--o{ cartItem
product ||--o{ orderItem
product ||--o{ productStatistics

@enduml
